clusters/td-cluster/traveldiscover/staging/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/redirect-entrypoint: websecure
spec:
  rules:
  - host: stagingapi.traveldiscover.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: td-backend
            port:
              number: 8080
  tls:
  - hosts:
    - stagingapi.traveldiscover.fr
