clusters/td-cluster/traveldiscover/staging/frontend-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure,web"
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "frontend-le"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: "traveldiscover-dev-redirect-to-https"
spec:
  rules:
  - host: staging.traveldiscover.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: td-frontend
            port:
              number: 4200
  tls:
  - hosts:
    - staging.traveldiscover.fr
    secretName: frontend-le-account-key
